kubernetes/cluster/active/apps/immich/overlays/prod/resources/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: http-gateway-api
      namespace: istio-ingress
  hostnames:
    - "photos.${FQDN_01}"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: immich-server
          namespace: immich
          port: 2283
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
